tests/phase_3/typeerrors/multiClass.ood
class stmt1 is

  x: string
  start() is
  begin
    x := "hello "
    x := x & x
  end start 

end stmt1

